# Splipy

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  MANIFEST.in  Makefile  PyPI_text.md  README  README.md  README.rst  basic_classes.html  build_ext.py  curve.C  curve.h  curvefactory.C  curvefactory.h  factories.html  genindex.html  geomodeller.C  geomodeller.h  index.html  io.html  lrsplines.pyx  main.C  objects.inv  point.C  push_documentation.py  py-modindex.html  pylint.cfg  pyproject.toml  pyutils.C  pyutils.h  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup-old.py  setup.cfg  (+17 more)
.github/workflows/: python-package.yml
GeoIO/: G2.py  InputFile.py  STL.py  SVG.py  __init__.py
GeoMod/: BSplineBasis.py  ControlPointOperations.py  Curve.py  CurveFactory.py  Factory.py  ModState.py  NACA.py  SplineModel.py  SplineObject.py  Surface.py  SurfaceFactory.py  Utils.py  Volume.py  VolumeFactory.py  __init__.py  basis_test.py  curve_test.py  curve_tests.py  factory_test.py  splinemodel_test.py  surface_test.py  volume_test.py
GeoMod/Tutorial/: slides.tex
GeoUtils/: CurveUtils.py  Elementary.py  Factory.py  IO.py  Image.py  Interpolate.py  Knots.py  Refinement.py  RotationalCrv2CrvSweep.py  Smooth.py  SurfaceFactory.py  TFI.py  VolumeFactory.py  WallDistance.py  __init__.py  image_test.py  refinement_test.py  smooth_test.py
GeoUtils/IO/: HDF5File.py  IFEMResultDatabase.py  InputFile.py  Numberer.py  SVGFile.py  Utilities.py  VTUFile.py  __init__.py
GeoUtils/Output/: SurfacePlot.py  __init__.py
_modules/: index.html
_modules/GeoMod/: BSplineBasis.html  ControlPointOperations.html  Curve.html  CurveFactory.html  SplineObject.html  Surface.html  SurfaceFactory.html  Volume.html  VolumeFactory.html
_modules/splipy/: BSplineBasis.html  Curve.html  SplineObject.html  Surface.html  Volume.html  curve_factory.html  surface_factory.html  volume_factory.html
_sources/: basic_classes.txt  factories.rst.txt  index.txt  io.rst.txt  tutorial.rst.txt  tutorial.txt  utils.rst.txt
_static/: bizstyle.js
app/: geoModeler.C
ci/: before_install.sh  install.sh
cmake/Modules/: FindEpyDoc.cmake  FindGoCompositeModel.cmake  FindGoIgeslib.cmake  FindGoImplicitization.cmake  FindGoIntersections.cmake  FindGoTools.cmake  FindGoTopology.cmake  FindGoTrivariate.cmake  FindNewmat.cmake  FindOpenNURBS.cmake  FindParametrization.cmake  FindSISL.cmake  FindTTL.cmake  FindVTFWriter.cmake
cmake/Scripts/: CheckCommits.cmake
core/: MANIFEST.in  pyproject.toml  setup.py
core/src/splipy_core/: __init__.py  __init__.pyi  core.pyx
doc/: .gitignore  Makefile  basic_classes.rst  conf.py  factories.rst  fixupdebs.sh.in  gendocumentation.py  index.rst  io.rst  tutorial.rst
doc/Tutorial/: Basic manipulation.ipynb  Factory methods.ipynb  Getting Started.ipynb  Knots and Bolts.ipynb
examples/: .gitignore  README.md  circle_animation.py  lissajous.py  loft.py  read.py  reuleaux.py  sphere.g2  teapot.g2  trefoil.py  write.py
include/: 3dmutils.h  curve.h  curvefactory.h  geomodeller.h  geomodversion.h.in  hdf5utils.h  igesutils.h  point.h  preprocess.h  pyutils.h  stlutils.h  surface.h  surfacefactory.h  surfacemodel.h  surfacemodelfactory.h  undef.h  volume.h  volumefactory.h  volumemodel.h  vtf.h
scripts/: chair.py  join_pipes.py  testCircleSeg.py  testContractTo.py  testCoonsPatch.py  testCrvCrvIntersection.py  testCylinderIntersect.py  testDegenVolume.py  testElementary.py  testInterpolate2.py  testInterpolationUtil.py  testIntersect.py  testMirror.py  testNonRational.py  testNumberer.py  testPickling.py  testRefine.py  testSplit.py  testTrimming.py  testVolMirror.py  testVolUniformRefine.py  testVolumeModel.py  testVtfCurve.py  testVtfSurface.py  testVtfVolume.py  test_removepart2.py  testcurves.py  testsplitcurves.py  testsplitvolumes.py  testsurfaces.py  testvolumes.py  varying_pipe.py
scripts/unfinished/: create_hemisphere.py  plane_with_hole.py  test_regularize.py
splipy/: BSplineBasis.py  Curve.py  SplineModel.py  SplineObject.py  Surface.py  TrimmedSurface.py  Volume.py  __init__.py  __version__.py  basis.py  basis_eval.c  basis_eval.pyi  basis_eval.pyx  basis_test.py  bench_evaluation_test.py  benchmark_test.py  curve.py  curve_factory.py  curve_factory_test.py  curve_test.py  factory_test.py  splinemodel.py  splinemodel_test.py  splineobject.py  state.py  surface.py  surface_factory.py  surface_factory_test.py  surface_test.py  transform.py  trimmedsurface.py  types.py  volume.py  volume_factory.py  volume_test.py
splipy/IO/: g2.py  g2_test.py  svg.py  svg_test.py
splipy/io/: __init__.py  g2.py  g2_test.py  grdecl.py  (+8 more)
src/: 3dmutils.C  curve.C  curvefactory.C  geomodeller.C  hdf5utils.C  igesutils.C  main.C  point.C  preprocess.C  pyutils.C  stlutils.C  surface.C  surfacefactory.C  surfacemodel.C  surfacemodelfactory.C  volume.C  volumefactory.C  volumemodel.C  vtf.C
test/: basis_test.py  benchmark_test.py  curve_factory_test.py  curve_test.py  splinemodel_test.py  surface_factory_test.py  surface_test.py  trimmed_surface_test.py  volume_factory_test.py  volume_test.py
test_utils/: affine_test.py  derivative_spline_test.py  general.py  generate_affine.py  generate_knot_insert.py  generate_raise_order.py  generate_rebuild.py  knot_insert_test.py  raise_order_test.py  rebuild_test.py
tests/: basis_test.py  benchmark_test.py  chair.reg  curve_factory_test.py  curve_test.py  dotest  dotest.in  join_pipes.reg  makereg.in  pawn.g2  splinemodel_test.py  surface_factory_test.py  surface_test.py  testCircleSeg.reg  testContractTo.reg  testCoonsPatch.reg  testCrvCrvIntersection.reg  testCylinderIntersect.reg  testDegenVolume.reg  testElementary.reg  testInterpolate2.reg  testInterpolationUtil.reg  testIntersect.reg  testMirror.reg  testNonRational.reg  testNumberer.reg  testPickling.reg  testRefine.reg  testSplit.reg  testTrimming.reg  testVolMirror.reg  testVolUniformRefine.reg  testVolumeModel.reg  testVtfCurve.reg  testVtfSurface.reg  testVtfVolume.reg  testcurves.reg  testsplitcurves.reg  testsplitvolumes.reg  testsurfaces.reg  (+5 more)
(+110 files in other folders)
