[tool.poetry]
name = "splipy"
version = "1.9.1"
description = "Spline modelling library for Python"
authors = [
    "Kjetil Andre Johannessen <kjetijo@gmail.com>",
    "Eivind Fonn <evfonn@gmail.com>",
]
maintainers = [
    "Kjetil Andre Johannessen <kjetijo@gmail.com>",
    "Eivind Fonn <evfonn@gmail.com>",
]
license = "GLP-3.0-only"
readme = "PyPI_text.md"
homepage = "https://github.com/SINTEF/Splipy"
repository = "https://github.com/SINTEF/Splipy"
documentation = "https://sintef.github.io/Splipy/"
keywords = [
    "Bspline",
    "Splines",
    "NURBS",
    "Curve",
    "Surface",
    "Volume",
    "Interpolation",
    "Approximation",
    "Fit",
    "Integration",
    "Differentiation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
include = [
    "splipy/templates/*.bpt",
    { path = "splipy/*.so", format="wheel" },
]

[tool.poetry.build]
script = "build_ext.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.0"
scipy = "^1.10"

[tool.poetry.extras]
FiniteElement = ["nutils"]
Images = ["opencv-python"]
Rhino = ["rhino3dm"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-benchmark = "^4.0.0"
cython = "^0.29.34"
sphinx = "^6.1.3"
bump-my-version = "^0.17.3"

[build-system]
requires = ["poetry-core", "cython", "numpy", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "1.9.1"
allow_dirty = false
commit = true
tag = true
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "splipy/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
