[project]
name = "splipy"
version = "1.10.0"
description = "Spline modelling library for Python"
readme = "PyPI_text.md"
authors = [
    { name = "Kjetil Andre Johannessen", email = "kjetil.johannessen@sintef.no" },
    { name = "Eivind Fonn", email = "eivind.fonn@sintef.no" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.10",
    "splipy-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
finiteelement = [
    "nutils>=8.4",
]
images = [
    "opencv-python>=4.11.0.86",
]
rhino = [
    "rhino3dm>=8.17.0",
]
dev = [
    "bump-my-version>=1.1.1",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "sphinx>=8.2.3",
]

[tool.bumpversion]
current_version = "1.10.0"
allow_dirty = false
commit = true
tag = true
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "core/pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/splipy/__init__.py"

[[tool.bumpversion.files]]
filename = "core/src/splipy_core/__init__.py"

[[tool.bumpversion.files]]
filename = "doc/conf.py"

[tool.uv.sources]
splipy-core = { workspace = true }

[tool.uv.workspace]
members = [ "core" ]
