[project]
name = "splipy"
version = "1.10.1"
description = "Spline modelling library for Python"
readme = "PyPI_text.md"
authors = [
    { name = "Kjetil Andre Johannessen", email = "kjetil.johannessen@sintef.no" },
    { name = "Eivind Fonn", email = "eivind.fonn@sintef.no" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.10",
    "splipy-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
finiteelement = [
    "nutils>=8.4",
]
images = [
    "opencv-python>=4.11.0.86",
]
rhino = [
    "rhino3dm>=8.17.0",
]
dev = [
    "bump-my-version>=1.1.1",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.11.4",
    "sphinx>=8.2.3",
]
grdecl = [
    "h5py>=3.13.0",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
]

[tool.bumpversion]
current_version = "1.10.1"
allow_dirty = false
commit = true
tag = true
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "core/pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/splipy/__init__.py"

[[tool.bumpversion.files]]
filename = "core/src/splipy_core/__init__.py"

[[tool.bumpversion.files]]
filename = "doc/conf.py"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
files = ["src/**/*.py", "tests/**/*.py", "push_documentation.py"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

# Add path to stubs directory if you need to write stubs
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.ruff]
line-length = 110
include = ["src/**/*.py", "core/**/*.pyi", "tests/**/*.py", "stubs/**/*.pyi", "push_documentation.py"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = [
    "E741",     # Ambiguous variable name
    "SIM115",   # Complains if we use __enter__ inside an __enter__ method
    "TD003",    # Issue links for each todo comment
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.uv.sources]
splipy-core = { workspace = true }

[tool.uv.workspace]
members = [ "core" ]
