[project]
name = "splipy-core"
version = "1.9.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eivind Fonn", email = "evfonn@gmail.com" }
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "numpy>=1.25",
]

[build-system]
requires = ["setuptools>=61", "cython>=3", "numpy>=2"]
build-backend = "setuptools.build_meta"
